Created Image View, Multiple View and double view. Added next previous to slideshow

--- a/plonetheme/teylersmuseum/browser/css/menu.css
+++ b/plonetheme/teylersmuseum/browser/css/menu.css
@@ -17,7 +17,7 @@
 	top: 50px;
 	overflow: hidden;
 	border: none;
-	background: url(++resource++plonetheme.teylersmuseum.css/cross_white.png) no-repeat center center;
+	background: url(++resource++plonetheme.bootstrapModern.css/cross_white.png) no-repeat center center;
 	background-size: 16px 16px;
 	text-indent: 200%;
 	color: transparent;
