--- a/plonetheme/teylersmuseum/browser/css/bootstrap3/bootstrap.css
+++ b/plonetheme/teylersmuseum/browser/css/bootstrap3/bootstrap.css
@@ -8,7 +8,7 @@
 */
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
 html {
-  font-family: sans-serif;
+  font-family: serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -889,7 +889,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Source Sans Pro", Calibri, Candara, Arial, sans-serif;
+  font-family: "Source Sans Pro", Calibri, Candara, Arial, serif;
   font-size: 100%;
   line-height: 1.42857143;
   color: #333333;
@@ -990,7 +990,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: "Source Sans Pro", Calibri, Candara, Arial, sans-serif;
+  font-family: "Source Sans Pro", Calibri, Candara, Arial, serif;
   font-weight: 300;
   line-height: 1.1;
   color: inherit;
