--- a/plonetheme/teylersmuseum/browser/css/menu.css
+++ b/plonetheme/teylersmuseum/browser/css/menu.css
@@ -232,6 +232,131 @@
 	position: fixed;
 }
 
+/* NEW MENU */
 
+.navmenu-fixed-left, .navbar-offcanvas.navmenu-fixed-left {
+	border: 0px;
+}
+
+#nav_menu {
+	background-color: #242424;
+}
+
+#nav_menu > ul.nav {
+	margin: 20px;
+}
+
+#nav_menu ul li {
+	font-family: "Merriweather", serif;
+	font-weight: 400; 
+	font-size: 1.125em;
+	color: #999999;
+}
+
+#nav_menu ul.nav .active > a {
+	background-color: #242424;
+	color: #ffffff;
+}
+
+#nav_menu .navbar-form {
+	width: 100%;
+}
+
+.navmenu, .navbar-offcanvas {
+	width: 400px;
+}
+
+#nav_menu .navbar-form .input-group {
+	width: 100%;
+}
+
+#nav_menu #srch-term {
+	border-radius: 20px;
+	z-index:0;
+}
+
+#nav_menu .navbar-form .fa-search {
+	color: #999999;
+}
+
+#nav_menu .navbar-form input { 
+	text-indent: 14px;
+	background-color: #000000;
+	border-color: #000000;
+	font-family: "Merriweather", serif;
+	font-weight: 400;
+	font-size: 0.850em;
+	color: #999999;
+}
+
+#nav_menu .navbar-form .fa-search { 
+  position: absolute;
+  top: 14px;
+  right: 14px;
+  z-index:1;
+}
+
+#nav_menu .navbar-form {
+	padding: 0px;
+	padding-left: 30px;
+	padding-right: 30px;
+}
+
+#nav_menu #portal-languageselector {
+	padding-top: 30px;
+}
+
+#nav_menu #portal-languageselector {
+	margin: 0px !important;
+	padding-left: 30px;
+}
+
+#nav_menu .nav > li > a {
+	padding: 10px 10px;
+}
+
+#nav_menu #portal-languageselector li a {
+	font-family: "Merriweather", serif;
+	font-weight: 400; 
+	font-size: 1.000em;
+	color: #999999;
+}
+
+#nav_menu #portal-languageselector li {
+	display: none;
+}
+
+#nav_menu #portal-languageselector li a {
+	color: #999999 !important;
+}
+
+#nav_menu #portal-languageselector li:not(.currentLanguage) {
+	display: block;
+}
+
+#nav_menu ul.nav:not(.submenu) {
+	text-transform: uppercase;
+	font-family: 'Raleway', sans-serif;
+	font-weight: 700;
+	color: #d75745;
+}
+
+#nav_menu ul.nav:not(.submenu) > li > a {
+	font-family: 'Raleway', sans-serif;
+	font-weight: 700;
+	color: #d75745;
+}
+
+#nav_menu ul.submenu {
+	margin: 0px;
+}
+
+#nav_menu ul.submenu li {
+	text-transform: none;
+	font-family: "Merriweather", serif;
+	font-weight: 400; 
+	font-size: 1.000em;
+	color: #999999;
+}
 
 
